--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 This repository contains the DOMserver component of the DOMjudge architecture.
 
-Currently in use for my MSc thesis.
-jcxavier
+Currently in use in my MSc thesis.
+
+João Xavier
 
